# Fitness-Eqiupment

./: README.md  develop-log.txt  log.txt
Fitness-Equipment/: .$developer.drawio.bkp  .$developer.drawio.dtmp  CMakeLists.txt  Fitness-Equipment.pro  Fitness-Equipment.pro.user.89ca2bb  developer.drawio  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  open  open.cpp  open.sh  planning.md  run.sh
build-Fitness-Equipment-Desktop-Debug/: Makefile  moc_applicationwindow.cpp  moc_equipmentconnect.cpp  moc_equipmentitem.cpp  moc_healthmanagerwindow.cpp  moc_mainwindow.cpp  moc_manualwindow.cpp  moc_predefs.h  moc_serialportservice.cpp  moc_sportwindow.cpp  moc_unitreemotorserialservice.cpp  qrc_resource.cpp  ui_applicationwindow.h  ui_equipmentconnect.h  ui_equipmentitem.h  ui_healthmanagerwindow.h  ui_mainwindow.h  ui_manualwindow.h  ui_sportwindow.h
build-Fitness-Equipment-Desktop_Qt_5_14_2_GCC_64bit-Debug/: CMakeCache.txt  Fitness-Equipment  Fitness-Equipment.cbp  Makefile  cmake_install.cmake  moc_applicationwindow.cpp  moc_equipmentconnect.cpp  moc_equipmentconnection.cpp  moc_equipmentitem.cpp  moc_equipmentsetting.cpp  moc_equipsettingwindow.cpp  moc_healthmanagerwindow.cpp  moc_mainwindow.cpp  moc_manualwindow.cpp  moc_serialportservice.cpp  moc_sportwindow.cpp  moc_unitreemotorserialservice.cpp  qrc_resource.cpp  (+9 more)
development resource/A1电机资料/02SDK/UnitreeMotorSDK_A1Go1_Sup220423/UnitreeMotorSDK_A1Go1_Sup220423/: CMakeLists.txt
development resource/A1电机资料/02SDK/UnitreeMotorSDK_A1Go1_Sup220423/UnitreeMotorSDK_A1Go1_Sup220423/src/: test_motor.cpp
(+74 files in other folders)
